# cpp-sample-bindings

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.devcontainer/dotnet-8.0/: devcontainer.json
.devcontainer/dotnet-8.0/scripts/: install-dependencies.sh
.devcontainer/go/: devcontainer.json
.devcontainer/go/scripts/: install-dependencies.sh
.devcontainer/python/: devcontainer.json
.devcontainer/python/scripts/: install-dependencies.sh  install-dependenencies.sh
.devcontainer/rust/: devcontainer.json
.devcontainer/rust/scripts/: install-dependencies.sh  install-dependenencies.sh
.github/workflows/: format_and_lint.yml  pr.yml  release.yml
apps/: CMakeLists.txt
apps/audio-player/: CMakeLists.txt
apps/audio-player/include/: audio-player.h
apps/audio-player/src/: CMakeLists.txt  audio-player.cpp
apps/audio/include/: audio-player.h
apps/audio/src/: audio-player.cpp
apps/video-player/: CMakeLists.txt
apps/video-player/include/: video-player.h
apps/video-player/src/: CMakeLists.txt  video-player.cpp
bindings/c#/Mgtt.CoreWrapper/: CoreWrapper.cs  Program.cs
bindings/csharp/Mgtt.CoreWrapper/: CoreWrapper.cs  Program.cs
bindings/go/: go.mod  main.go  math-utils.h
bindings/python/: audio_wrapper.py  core.py  core_wrapper.py  main.py
bindings/rust/cxx-sample/: Cargo.toml  build.rs
bindings/rust/cxx-sample/include/: math-utils.h
bindings/rust/cxx-sample/src/: main.rs  math-utils.cc
cmake/: CTestConfig.cmake
devops/scripts/bash/: compile_source_code.sh
modules/: CMakeLists.txt
modules/audio/include/: audio.h
modules/audio/src/: CMakeLists.txt  audio.cpp
modules/audio/test/: CMakeLists.txt  audio-test.cpp  entrypoint.cpp
modules/core/: CMakeLists.txt
modules/core/include/: math-utils.h
modules/core/src/: CMakeLists.txt  math-utils.cpp
modules/core/test/: CMakeLists.txt  entrypoint.cpp  math-utils-test.cpp
modules/video/: CMakeLists.txt
modules/video/include/: video.h
modules/video/src/: CMakeLists.txt  video.cpp
modules/video/test/: CMakeLists.txt  entrypoint.cpp  video-test.cpp
scripts/bash/: format_and_lint.sh
scripts/ps1/: compile_source_code.ps1
